...
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Companies Selected" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WPs-4e-DwM">
                                            <rect key="frame" x="8" y="8" width="250" height="24"/>
                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xE9-O3-9Rq">
                                            <rect key="frame" x="304" y="14" width="63" height="11"/>
                                            <state key="normal" title="Compare"/>
                                            <connections>
                                                <action selector="compare1:" destination="zKi-eE-QL6" eventType="touchUpInside" id="gJP-Td-riG"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJu-Ee-rW3">
                                            <rect key="frame" x="234" y="14" width="36" height="11"/>
                                            <state key="normal" title="Clear">
                                                <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            </state>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgx-fh-XsA">
                                                            <rect key="frame" x="240" y="22" width="107" height="19.5"/>
                                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="19"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7c-xF-jjX">
                                        <rect key="frame" x="81" y="6" width="212" height="55"/>
                                        <state key="normal" title="Button" image="compare-1"/>
                                        <connections>
                                            <action selector="compareButton:" destination="zKi-eE-QL6" eventType="touchUpInside" id="9Py-Pp-ike"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Btm-fI-SeS">
                                                        <rect key="frame" x="8" y="6" width="27" height="30"/>
                                                        <state key="normal" image="Back">
                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
        <scene sceneID="gC3-sY-Owj">
            <objects>
                <viewController storyboardIdentifier="UIViewController-XI4-Fj-Z3v" title="Portfolio" id="XI4-Fj-Z3v" customClass="PortfolioController" customModule="Hixel_IOS_App" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="fct-FD-Ovc">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
...
                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Overall Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="
                                                                    <rect key="frame" x="6" y="12" width="162" height="26"/>
                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Safety" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sy4-Nb-ke
                                                                    <rect key="frame" x="74" y="256" width="42" height="21"/>
                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                </constraints>
                                            </view>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple Inc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="4CO-Og-PaP">
                                                <rect key="frame" x="56" y="50" width="248" height="29"/>
                                                <constraints>
...
        <scene sceneID="yFM-dj-VEl">
            <objects>
                <viewController title="Settings" id="8DS-cz-MQ6" customClass="SettingsController" customModule="Hixel_IOS_App" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qbj-h4-dDq">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
