...
        // performSegue(withIdentifier: "Dashboard_Graph_info", sender: self)
        performSegue(withIdentifier: "port_graphinfo2", sender: self)
    }
    @IBOutlet weak var barChartView: BarChartView!
    
    
    let hardCodedStrings = ["Dashboard","Overview"]
    let financialIndicators = ["Health","Performance","Strength","Returns","Safety"]
    let overallFinancialValues = [3,2,5,3,4]
    let graphScale = ["0","1","2","3","4","5"]
    //let comapanyDataProvider = MoyaProvider<ServerInterface>()
    
    // MARK: Array that holds the companies retrieved from the server
    var portfolioCompanies = [Company]()
...
        SearchTableView.isHidden = true
        print("Hoollla")
        print("Companies count ",portfolioCompanies)
        
        setupHeaderView()
        overallLabel.text = hardCodedStrings[1]
        months = ["Health", "Performance", "Return", "Safety", "Strength"]
        
        
//        dataForBarChart()
//        let yvalues = avgScores
//        print("Hec",yvalues)
//        setupBarChart(dataPoints: months, values: yvalues)
...
        var tempCompanies: [TempCompany] = []
        let company1 = TempCompany(name: "Apple Inc", stockExchange: "NASDAQ", score: 12)
        let company3 = TempCompany(name: "Twitter Inc", stockExchange: "NYSE", score: 95)
        let company4 = TempCompany(name: "Snap Inc", stockExchange: "NYSE", score: 55)
        let company5 = TempCompany(name: "Daimler AMG", stockExchange: "NYSE", score: 67)
        let company6 = TempCompany(name: "Facebook Inc", stockExchange: "NASDAQ", score: 12)
        let company7 = TempCompany(name: "Tesla, Inc.", stockExchange: "NASDAQ", score: 89)
        let company9 = TempCompany(name: "Microsoft Corp.", stockExchange: "NYSE", score: 55)
        let company12 = TempCompany(name: "Amazon Com Inc.", stockExchange: "NYSE", score: 67)
        let company13 = TempCompany(name: "Advanced Micro Devices Inc", stockExchange: "NYSE", score: 67)
        let company14 = TempCompany(name: "Intel", stockExchange: "NYSE", score: 67)
        
        
...
